--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.1
+pywin32==307
 pyzmq==26.4.0
 referencing==0.36.2
 rpds-py==0.25.0
