--- a/requirements.txt
+++ b/requirements.txt
@@ -61,3 +61,6 @@ typing_extensions==4.13.2
 tzdata==2025.2
 wcwidth==0.2.13
 webencodings==0.5.1
+matplotlib==3.9.2
+seaborn==0.13.2
+scikit-learn==1.5.2
